--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -33,88 +33,137 @@
         {{count}} arts
       </p>
     </div>
-    <div class="flex flex-col items-center justify-center py-3 bg-slate700  rounded-lg px-3 container px-3 lg:px-6 mx-auto">
-      <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="grid grid-cols-3 lg:grid-cols-12 gap-3 w-full ">
-        <div class=" flex flex-col items-start col-span-1 lg:col-span-4 ">
-          <label for=" title" class="text-slate500">Title</label>
-          <input value="{{form.title}}" id="title" name="title" placeholder="Search By Title" class="text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
-        </div>
-        <div class=" flex flex-col items-start col-span-1 lg:col-span-4 ">
-          <label for="author" class="text-slate500">Artist</label>
-          <input value="{{form.author}}" id="author" name="author" placeholder="Search By Artist" class="text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
-        </div>
-        <div class="flex flex-col items-start  col-span-1 lg:col-span-4 ">
-          <label for="type" class="text-slate500">Type</label>
-          <select id="type" name="type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
-            <option value="0" {% if form.s_types == 0 %}selected{% endif %}>
-              all
+
+  </div>
+  {% if device.is_small %}
+  <div class="mt-6">
+    <button class="open text-slate500 px-3 py-2  border border-slate500 w-full rounded-md" onclick="toggle();" style="height: 40px;"><i class="bi bi-search"></i><span class="ml-3">Search</span></button>
+  </div>
+  <div class="mobile_search flex flex-col items-center justify-center py-3  px-12   mx-auto w-full  fixed z-50 bg-white top-0 h-screen close transition-all">
+    <button class="absolute top-12 right-12 text-slate500 px-3 py-2  border border-slate500  rounded-md" onclick="destory();" style="height: 40px;"><i class="fas fa-times-circle"></i><span class="ml-3">Close</span></button>
+    <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="w-full">
+      <div class=" grid grid-cols-1  gap-3 w-full ">
+        <div class="flex flex-col items-start col-span-1 ">
+          <label for="sort" class="text-slate500 col-span-1">Sort By</label>
+          <select id="sort" name="sort" class="w-full px-3 py-2 bg-slate500  rounded-md mt-3 " style="height:40px;">
+            <option value="0" {% if form.sort == 0 %}selected{% endif %}>
+              Newest to Oldest
             </option>
-            {% for type in types  %}
-            <option value="{{type.pk}}" {% if form.s_types == type.pk  %}selected{% endif %}>{{type}}</option>
-            {% endfor %}
+            <option value="1" {% if form.sort == 1 %}selected{% endif %}>
+              Oldest to Newest
+            </option>
+            <option value="2" {% if form.sort == 2 %}selected{% endif %}>
+              Price:low to high
+            </option>
+            <option value="3" {% if form.sort == 3 %}selected{% endif %}>
+              Price:high to low
+            </option>
           </select>
         </div>
-        <div class="flex flex-col items-start   col-span-1 lg:col-span-3">
-          <label for="project_type" class="text-slate500">Project Type</label>
+        <div class=" flex flex-col items-start col-span-1 lg:col-span-2">
+          <select id="artists" name="artists" class="flex-1 px-3 py-2 bg-slate500  rounded-md w-full" style="height:40px;">
+            <option value="0" {% if form.s_artist == 0 %}selected{% endif %}>
+              Seacrh by artist
+            </option>
+            {% for artist in artists  %}
+            <option value="{{artist.pk}}" {% if form.s_artists == artist.pk  %}selected{% endif %}>{{artist}}</option>
+            {% endfor %}
+          </select>
+
+        </div>
+        <div class="flex flex-col items-start   col-span-1 lg:col-span-2">
+
           <select id="project_type" name="project_type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
-            <option value="0" {% if form.s_project_types == 0 %}selected{% endif %}>all</option>
+            <option value="0" {% if form.s_project_types == 0 %}selected{% endif %}>Search by Project</option>
             {% for project_type in project_types  %}
             <option value="{{project_type.pk}}" {% if form.s_project_types == project_type.pk  %}selected{% endif %}>{{project_type}}</option>
             {% endfor %}
           </select>
         </div>
-
-        <div class="flex flex-col items-start col-span-1 lg:col-span-3">
-          <label for="createdAt" class="text-slate500">Created At</label>
-          <select id="createdAt" name="createdAt" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
-            <option value="3" {% if form.createdAt == 3 %}selected{% endif %}>
-              Created at
-            </option>
-            <option value="0" {% if form.createdAt == 0 %}selected{% endif %}>
-              Newest to Oldest
-            </option>
-            <option value="1" {% if form.createdAt == 1 %}selected{% endif %}>
-              Oldest to Newest
-            </option>
+        <div class=" flex flex-col items-start col-span-1 lg:col-span-2 ">
+          <input value="{{form.searchtext}}" id="searchtext" name="searchtext" placeholder="Search.." class="pl-4 text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
+        </div>
+        <div class="flex flex-col items-start justify-center mt-6 divide-x divide-slate700 ">
+          <label for="sort" class="text-slate500 col-span-1">Category</label>
+          <select id="type" name="type" class="mt-3 px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+            <option value="0" {% if form.s_types == 0  %}selected{% endif %}>all</option>
+            {% for type in types  %}
+            <option value="{{type.pk}}" {% if form.s_types == type.pk  %}selected{% endif %}>{{type}}</option>
+            {% endfor %}
           </select>
         </div>
-        <div class="flex flex-col items-start col-span-1 lg:col-span-3">
+        <div class="flex flex-col items-center justify-end col-span-1 lg:col-span-1">
+          <button class="px-3 py-2 bg-slate500 w-full rounded-md" style="height: 40px;" onclick="destory();"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
 
-          <label for="price" class="text-slate500">Price</label>
-          <select id="price" name="price" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
-            <option value="3" {% if form.price == 3 %}selected{% endif %}>
-              Price
+    </form>
+  </div>
+  {% else %}
+
+  <div class="flex flex-col items-center justify-center py-3  px-3 container px-3 lg:px-6 mx-auto mt-3 w-full">
+    <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="w-full">
+      <div class=" grid grid-cols-3 lg:grid-cols-10 gap-3 w-full ">
+        <div class="flex flex-row items-center col-span-1 lg:col-span-3 ">
+          <label for="sort" class="text-slate500 col-span-1">Sort By</label>
+          <select id="sort" name="sort" class="flex-1 px-3 py-2 bg-slate500  rounded-md ml-3" style="height:40px;">
+            <option value="0" {% if form.sort == 0 %}selected{% endif %}>
+              Newest to Oldest
             </option>
-            <option value="0" {% if form.price == 0 %}selected{% endif %}>
+            <option value="1" {% if form.sort == 1 %}selected{% endif %}>
+              Oldest to Newest
+            </option>
+            <option value="2" {% if form.sort == 2 %}selected{% endif %}>
               Price:low to high
             </option>
-            <option value="1" {% if form.price == 1 %}selected{% endif %}>
+            <option value="3" {% if form.sort == 3 %}selected{% endif %}>
               Price:high to low
             </option>
           </select>
-          <!-- <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
-            <label name="price_id_sort_up" for="price_id_sort_up" class="box-radio-input flex flex-col items-center ">
-              <input type="radio" name="price" id="price_id_sort_up" value='1' {% if form.price == 1 %}checked{% endif %}>
-              <span>
-                <i class="bi bi-arrow-up"></i></span>
-            </label>
-            <label name="price_id_sort_down" for="price_id_sort_down" class="box-radio-input flex flex-col items-center">
-              <input type="radio" name="price" id="price_id_sort_down" value='0' {% if form.price == 0 %}checked{% endif %}>
-              <span><i class=" bi bi-arrow-down"></i></span>
-            </label>
-          </div> -->
+        </div>
+        <div class=" flex flex-col items-start col-span-1 lg:col-span-2">
+          <select id="artists" name="artists" class="flex-1 px-3 py-2 bg-slate500  rounded-md w-full" style="height:40px;">
+            <option value="0" {% if form.s_artist == 0 %}selected{% endif %}>
+              Seacrh by artist
+            </option>
+            {% for artist in artists  %}
+            <option value="{{artist.pk}}" {% if form.s_artists == artist.pk  %}selected{% endif %}>{{artist}}</option>
+            {% endfor %}
+          </select>
 
         </div>
-        <div class="flex flex-col items-center justify-end col-span-1 lg:col-span-3">
+        <div class="flex flex-col items-start   col-span-1 lg:col-span-2">
+
+          <select id="project_type" name="project_type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+            <option value="0" {% if form.s_project_types == 0 %}selected{% endif %}>Search by Project</option>
+            {% for project_type in project_types  %}
+            <option value="{{project_type.pk}}" {% if form.s_project_types == project_type.pk  %}selected{% endif %}>{{project_type}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class=" flex flex-col items-start col-span-1 lg:col-span-2 ">
+          <input value="{{form.searchtext}}" id="searchtext" name="searchtext" placeholder="Search.." class="text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
+        </div>
+        <div class="flex flex-col items-center justify-end col-span-1 lg:col-span-1">
           <button class="px-3 py-2 bg-slate500 w-full rounded-md" style="height: 40px;"><i class="bi bi-search"></i></button>
         </div>
-      </form>
-      <!-- <form method="get" action="{% url "products:productList" %}">
-        {{form.as_p}}
-        <button>Search</button>
-      </form> -->
-    </div>
+      </div>
+      <div class="flex flex-row items-center justify-center mt-6 divide-x divide-slate700 ">
+        <div class="px-3">
+          <input id="all" type="radio" name="type" value="0" {% if form.s_types == 0 %}checked{% endif %} />
+          <label for="all">all</label>
+        </div>
+        {% for type in types  %}
+        <div class="px-3 search_radio">
+          <input id={{type}} name="type" type="radio" value="{{type.pk}}" {% if form.s_types == type.pk  %}checked{% endif %} />
+          <label for={{type}} class="">{{type}}</label>
+        </div>
+        {% endfor %}
+      </div>
+    </form>
   </div>
+  {% endif %}
+
   <section class="mt-24 container mx-auto pb-12">
 
     {% if products.count > 0 %}
@@ -179,15 +228,39 @@
     {% endif %}
 
   </div> -->
+  <style>
+    input[type="radio"] {
+      display: none;
+    }
+
+    input[type="radio"]+label {
+      color: #5E6D83;
+      cursor: pointer;
+    }
+
+    input[type="radio"]:checked+label {
+      color: #F5C226;
+    }
+
+    #searchtext::placeholder {
+      color: black
+    }
+
+    .close {
+      /* top: -100%; */
+      transform: translateY(-100%);
+    }
+
+    .open {
+      top: 0;
+    }
+  </style>
   <script>
     const card = document.querySelectorAll("#card");
     card.forEach(function(cardWrap) {
       const fontCard = cardWrap.parentNode
       const backCard = cardWrap.parentNode.nextSibling.nextSibling
-
       cardWrap.addEventListener("mouseenter", function(event) {
-
-
         let backCardcheck = backCard.classList.contains("opacity-100");
         if (backCardcheck) {
           backCard.classList.replace("opacity-100", "opacity-0")
@@ -200,10 +273,6 @@
         }
       });
       backCard.addEventListener("mouseleave", function(event) {
-        // highlight the mouseenter target
-        // event.target.style.color = "purple";
-
-
         let check = backCard.classList.contains("opacity-100");
         if (check) {
           backCard.classList.replace("opacity-100", "opacity-0")
@@ -216,6 +285,17 @@
         }
       })
     });
+
+    function toggle() {
+      const mobile_search = document.querySelector(".mobile_search")
+      mobile_search.classList.replace("close", "open")
+    }
+
+    function destory() {
+      const mobile_search = document.querySelector(".mobile_search")
+      console.log(mobile_search)
+      mobile_search.classList.replace("open", "close")
+    }
   </script>
 
 </div>
