--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -35,7 +35,7 @@
     </div>
 
   </div>
-  {% if device.is_small %}
+  {% if is_mobile %}
   <div class="mt-6">
     <button class="open text-slate500 px-3 py-2  border border-slate500 w-full rounded-md" onclick="toggle();" style="height: 40px;"><i class="bi bi-search"></i><span class="ml-3">Search</span></button>
   </div>
@@ -99,10 +99,11 @@
 
     </form>
   </div>
+
   {% else %}
 
   <div class="flex flex-col items-center justify-center py-3  px-3 container px-3 lg:px-6 mx-auto mt-3 w-full">
-    <form name=" myForm" method="GET" action="{% url "products:productList" %}" class="w-full">
+    <form name="myForm" method="GET" action="{% url "products:productList" %}" class="w-full">
       <div class=" grid grid-cols-3 lg:grid-cols-10 gap-3 w-full ">
         <div class="flex flex-row items-center col-span-1 lg:col-span-3 ">
           <label for="sort" class="text-slate500 col-span-1">Sort By</label>
