--- a/templates/main.html
+++ b/templates/main.html
@@ -47,7 +47,7 @@
   <p class="mt-6 text-lg font-light tracking-wider text-justify text-slate500">We strive to achieve something. We feel rewarded by achieving one by one. However, both those who have achieved a lot and those who have achieved a little say that they are insufficient, anxious, and lonely when looking back on their lives. It is typical of modern people who have lost their minds by coveting materials. What's the point of finding a missing heart only after losing it? Everyone must study self-positive and mind. You have to look around, talk to natural life, and find yourself in it. Writer Lee Cheol-soo's work comforts modern people who want to study their minds. First of all, it is a story handed down by a person who practices mind study and as a writer who writes down the sound of the mind in pictures and writing. He responded to this story with his own story and expressed his hope to continue with the conversation. It contains the desire for a flower to bloom in the conversation.
   </p>
   <div class="grid w-full grid-cols-1 lg:grid-cols-3 gap-24 justify-items-center mt-12">
-    {% for product in main_product  %}
+    {% for product in midsets  %}
     <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
