--- a/templates/main.html
+++ b/templates/main.html
@@ -67,7 +67,7 @@
           </div>
         </div>
       </div>
-      <a href="/mindset/{{mindset.id}}" id="backCard" class="flex-col items-start justify-between hidden w-full h-full p-6 transition-all duration-200 ease-in-out opacity-0 cursor-pointer bg-primary">
+      <a href="/products/{{mindset.id}}" id="backCard" class="flex-col items-start justify-between hidden w-full h-full p-6 transition-all duration-200 ease-in-out opacity-0 cursor-pointer bg-primary">
 
         <div class="flex flex-col items-start">
           <p class="text-xl font-bold line-clamp-1">{{mindset.title}}</p>
