--- a/templates/main.html
+++ b/templates/main.html
@@ -40,7 +40,7 @@
 {% endif %}
 <!-- the mindSet -->
 <section class="flex flex-col items-center w-full py-24 mx-auto container px-3 lg:px-6">
-  <p class="text-xl font-light text-white">Korean Calligraphic NFT Art</p>
+  <p class="text-xl font-light text-white">Lee Cheol-soo's NFT Art Collection</p>
   <h2 class="mt-2 text-5xl text-white">
     Mindset
   </h2>
